[gd_scene load_steps=11 format=3 uid="uid://bsb08q5g8qvgh"]

[ext_resource type="Texture2D" uid="uid://bn1aggu7548os" path="res://UI/FightzoneStatbar/box.png" id="1_l6ghy"]
[ext_resource type="FontFile" uid="uid://qiul4lwd2ov5" path="res://Common/Poco.ttf" id="1_sr737"]
[ext_resource type="Script" path="res://UI/FightzoneStatbar/fightzone_stat_bar.gd" id="2_41308"]
[ext_resource type="Texture2D" uid="uid://1b21nf441u83" path="res://UI/FightzoneStatbar/kills.png" id="3_uuckf"]
[ext_resource type="Texture2D" uid="uid://nitrmcam5i1i" path="res://UI/FightzoneStatbar/timer.png" id="4_bxek2"]
[ext_resource type="Texture2D" uid="uid://c6itsxko64lua" path="res://UI/FightzoneStatbar/kills_left.png" id="4_fndpe"]
[ext_resource type="Texture2D" uid="uid://crhsl2spr7x8i" path="res://UI/coin.png" id="5_wiytn"]
[ext_resource type="Script" path="res://UI/FightzoneStatbar/time.gd" id="5_yr7qo"]

[sub_resource type="Theme" id="Theme_pbkib"]
default_font = ExtResource("1_sr737")
default_font_size = 10
Label/colors/font_color = Color(0.105882, 0.133333, 0.211765, 1)
Label/font_sizes/font_size = 10

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_l4cty"]
texture = ExtResource("1_l6ghy")
texture_margin_left = 1.0
texture_margin_top = 1.0
texture_margin_right = 1.0
texture_margin_bottom = 1.0

[node name="FightzoneStatBar" type="Control"]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
grow_horizontal = 2
theme = SubResource("Theme_pbkib")
script = ExtResource("2_41308")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 24.0
offset_bottom = 39.0
theme_override_styles/panel = SubResource("StyleBoxTexture_l4cty")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = -4
theme_override_constants/margin_right = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
text = "wave: X"

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="HBoxContainer" type="GridContainer" parent="PanelContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
columns = 2

[node name="KillsLeft" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_fndpe")
stretch_mode = 3

[node name="MarginContainer4" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -5

[node name="KillsLeftLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer4"]
layout_mode = 2
text = "0"

[node name="Hourglass" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_bxek2")
stretch_mode = 3

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -5

[node name="TimeLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2"]
layout_mode = 2
text = "0"
script = ExtResource("5_yr7qo")

[node name="TextureRect" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_wiytn")
stretch_mode = 3

[node name="MarginContainer3" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -5

[node name="CoinsLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer3"]
layout_mode = 2
text = "0"

[node name="KillsIcon" type="TextureRect" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_uuckf")
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = -5

[node name="KillsLabel" type="Label" parent="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
text = "0"

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="PanelContainer/VBoxContainer/MarginContainer/HBoxContainer/MarginContainer2/TimeLabel" method="_on_timer_timeout"]
